View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026610 | Open CASCADE | OCCT:Configuration | public | 2015-08-27 11:53 | 2016-04-20 15:48 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2013 | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026610: Configuration - workaround vc12 compilation error in Select3D_SensitiveCircle (2 overloads have similar conversions) | ||||
Description | TKV3d can not be built:error C2666 appears during the building: 'Select3D_SensitivePoly::Select3D_SensitivePoly' : 2 overloads have similar conversions | ||||
Steps To Reproduce | 0. get origin/master (commit date 8/21/2015) 1. generate OCCT visual studio 2013 x64 solution by using CMake. 2. start build (release) | ||||
Additional information and documentation updates | Build FAILED.>D:\occt3\src\Select3D\Select3D_SensitiveCircle.cxx(181): error C2666: 'Select3D_SensitivePoly::Select3D_SensitivePoly' : 2 overloads have similar conversions 1> D:/occt3/src/Select3D/Select3D_SensitivePoly.hxx(63): could be 'Select3D_SensitivePoly::Select3D_SensitivePoly(const opencascade::handle<SelectBasics_EntityOwner> &,const Standard_Boolean,const Standard_Integer)' 1> D:/occt3/src/Select3D/Select3D_SensitivePoly.hxx(56): or 'Select3D_SensitivePoly::Select3D_SensitivePoly(const opencascade::handle<SelectBasics_EntityOwner> &,const opencascade::handle<TColgp_HArray1OfPnt> &,const Standard_Boolean)' 1> D:/occt3/src/Select3D/Select3D_SensitivePoly.hxx(48): or 'Select3D_SensitivePoly::Select3D_SensitivePoly(const opencascade::handle<SelectBasics_EntityOwner> &,const TColgp_Array1OfPnt &,const Standard_Boolean)' 1> while trying to match the argument list '(const opencascade::handle<SelectBasics_EntityOwner>, const opencascade::handle<TColgp_HArray1OfPnt>, bool)' 1> 1> | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Visual Studio 2010 x64 solution of OCCT has been built without any errors. |
|
Branch CR26610 has been created by kgv. SHA-1: 8da8f3d2c53a026e8c89f3769df61de0736abb7b No new revisions were added by this update. |
|
Please check compilation and integrate. |
|
Branch CR26610 has been updated by kgv. SHA-1: c12f2ed4cc48085097a62f8593143a21adfdfca1 Detailed log of new commits: Author: kgv Date: Fri Aug 28 10:12:41 2015 +0300 0026610: Configuration - workaround vc12 compilation error in Select3D_SensitiveCircle (2 overloads have similar conversions) Cast bool to Standard_Boolean explicitly. |
|
Branch CR26610 has been updated forcibly by mkv. SHA-1: 49d7815021a5f0f0fb131ed514c93216ca41ee84 |
|
Dear BugMaster, Branch CR26610 was rebased on current master of occt git-repository. SHA-1: 49d7815021a5f0f0fb131ed514c93216ca41ee84 |
|
Dear BugMaster, Branch CR26610 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 49d7815021a5f0f0fb131ed514c93216ca41ee84 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 91871104 / 91189064 [+0.75%] Total CPU difference: 17770.25999999889 / 17161.859999999382 [+3.55%] products component : Total MEMORY difference: 25242071 / 25226546 [+0.06%] Total CPU difference: 7319.739999999983 / 7039.5099999999975 [+3.98%] Testing on Windows: occt component : Total MEMORY difference: 57093081 / 57086055 [+0.01%] Total CPU difference: 16443.55060669905 / 16439.463380498913 [+0.02%] products component : Total MEMORY difference: 16228604 / 16228570 [+0.00%] Total CPU difference: 5325.484137499969 / 5334.079792599963 [-0.16%] There are no differences in images found by testdiff. |
|
Branch CR26610 has been deleted by kgv. SHA-1: 49d7815021a5f0f0fb131ed514c93216ca41ee84 |
occt: master ee2038c0 2015-08-28 07:12:41 Committer: bugmaster Details Diff |
0026610: Configuration - workaround vc12 compilation error in Select3D_SensitiveCircle (2 overloads have similar conversions) Cast bool to Standard_Boolean explicitly. |
Affected Issues 0026610 |
|
mod - src/Select3D/Select3D_SensitiveCircle.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-08-27 11:53 |
|
New Issue | |
2015-08-27 11:53 |
|
Assigned To | => kgv |
2015-08-27 11:54 |
|
Platform | Windows => |
2015-08-27 11:54 |
|
Steps to Reproduce Updated | |
2015-08-27 11:55 |
|
Note Added: 0044709 | |
2015-08-27 13:55 | kgv | OS | Windows => VC++ 2013 |
2015-08-27 13:55 | kgv | OS Version | 7 => 64 bit |
2015-08-27 13:55 | kgv | Platform | => Windows |
2015-08-27 13:55 | kgv | Product Version | Unscheduled => |
2015-08-27 13:58 |
|
Steps to Reproduce Updated | |
2015-08-27 16:18 |
|
Additional Information Updated | |
2015-08-28 10:11 | kgv | Severity | major => trivial |
2015-08-28 10:11 | kgv | Status | new => assigned |
2015-08-28 10:11 | kgv | Category | OCCT:Visualization => OCCT:Configuration |
2015-08-28 10:11 | kgv | Target Version | 6.9.1 => 7.0.0 |
2015-08-28 10:11 | kgv | Summary | OCCT solution can not be built due to 2 overloads of Select3D_SensitivePoly have similar conversions => Configuration - workaround vc12 compilation error in Select3D_SensitiveCircle (2 overloads have similar conversions) |
2015-08-28 10:11 | kgv | Description Updated | |
2015-08-28 10:11 | kgv | Additional Information Updated | |
2015-08-28 10:13 | git | Note Added: 0044776 | |
2015-08-28 10:13 | kgv | Note Added: 0044777 | |
2015-08-28 10:13 | kgv | Assigned To | kgv => bugmaster |
2015-08-28 10:13 | kgv | Status | assigned => resolved |
2015-08-28 10:37 | git | Note Added: 0044779 | |
2015-08-28 12:35 | kgv | Status | resolved => reviewed |
2015-08-28 17:48 | git | Note Added: 0044844 | |
2015-08-28 17:50 |
|
Assigned To | bugmaster => mkv |
2015-08-31 17:41 |
|
Note Added: 0044898 | |
2015-08-31 17:42 |
|
Note Added: 0044900 | |
2015-08-31 17:42 |
|
Assigned To | mkv => bugmaster |
2015-08-31 17:42 |
|
Status | reviewed => tested |
2015-08-31 17:42 |
|
Test case number | => Not needed |
2015-09-04 13:02 | bugmaster | Changeset attached | => occt master ee2038c0 |
2015-09-04 13:02 | bugmaster | Status | tested => verified |
2015-09-04 13:02 | bugmaster | Resolution | open => fixed |
2015-10-16 16:08 | git | Note Added: 0046863 | |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:48 |
|
Status | verified => closed |