0026610: Configuration - workaround vc12 compilation error in Select3D_SensitiveCircle (2 overloads have similar conversions)

Cast bool to Standard_Boolean explicitly.